macos/Generated/safeparts_uniffiFFI.h

// ⚠️ Attention: If you change this #else block (ending in `#endif // def UNIFFI_SHARED_H`) you *must* ⚠️
// ⚠️ increment the version suffix in all instances of UNIFFI_SHARED_HEADER_V4 in this file.           ⚠️

typedef struct RustBuffer
{
    uint64_t capacity;
    uint64_t len;
    uint8_t *_Nullable data;
} RustBuffer;
// Error definitions
typedef struct RustCallStatus {
    int8_t code;
    RustBuffer errorBuf;
} RustCallStatus;
typedef void (*UniffiRustFutureContinuationCallback)(uint64_t, int8_t
    );
double ffi_safeparts_uniffi_rust_future_complete_f64(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_safeparts_uniffi_rust_future_poll_rust_buffer(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_safeparts_uniffi_rust_future_cancel_rust_buffer(uint64_t handle
);
void ffi_safeparts_uniffi_rust_future_free_rust_buffer(uint64_t handle
);
RustBuffer ffi_safeparts_uniffi_rust_future_complete_rust_buffer(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_safeparts_uniffi_rust_future_poll_void(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_safeparts_uniffi_rust_future_cancel_void(uint64_t handle
);
void ffi_safeparts_uniffi_rust_future_free_void(uint64_t handle
);
void ffi_safeparts_uniffi_rust_future_complete_void(uint64_t handle, RustCallStatus *_Nonnull out_status
);
uint16_t uniffi_safeparts_uniffi_checksum_func_combine_share_input(void

);
uint16_t uniffi_safeparts_uniffi_checksum_func_inspect_share_input(void

);
uint16_t uniffi_safeparts_uniffi_checksum_func_split_secret(void

);
uint32_t ffi_safeparts_uniffi_uniffi_contract_version(void

);