windows/Generated/safeparts_uniffi.cs


    #if NET8_0_OR_GREATER
    [LibraryImport("safeparts_uniffi")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("safeparts_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     double ffi_safeparts_uniffi_rust_future_complete_f64(ulong @handle,ref UniffiRustCallStatus _uniffi_out_err
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("safeparts_uniffi")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("safeparts_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     void ffi_safeparts_uniffi_rust_future_poll_rust_buffer(ulong @handle,IntPtr @callback,ulong @callbackData
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("safeparts_uniffi")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("safeparts_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     void ffi_safeparts_uniffi_rust_future_cancel_rust_buffer(ulong @handle
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("safeparts_uniffi")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("safeparts_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     void ffi_safeparts_uniffi_rust_future_free_rust_buffer(ulong @handle
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("safeparts_uniffi")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("safeparts_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     RustBuffer ffi_safeparts_uniffi_rust_future_complete_rust_buffer(ulong @handle,ref UniffiRustCallStatus _uniffi_out_err
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("safeparts_uniffi")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("safeparts_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     void ffi_safeparts_uniffi_rust_future_poll_void(ulong @handle,IntPtr @callback,ulong @callbackData
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("safeparts_uniffi")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("safeparts_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     void ffi_safeparts_uniffi_rust_future_cancel_void(ulong @handle
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("safeparts_uniffi")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("safeparts_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     void ffi_safeparts_uniffi_rust_future_free_void(ulong @handle
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("safeparts_uniffi")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("safeparts_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     void ffi_safeparts_uniffi_rust_future_complete_void(ulong @handle,ref UniffiRustCallStatus _uniffi_out_err
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("safeparts_uniffi")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("safeparts_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     ushort uniffi_safeparts_uniffi_checksum_func_combine_share_input(
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("safeparts_uniffi")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("safeparts_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     ushort uniffi_safeparts_uniffi_checksum_func_inspect_share_input(
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("safeparts_uniffi")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("safeparts_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     ushort uniffi_safeparts_uniffi_checksum_func_split_secret(
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("safeparts_uniffi")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("safeparts_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     uint ffi_safeparts_uniffi_uniffi_contract_version(
    );



    static void uniffiCheckContractApiVersion() {
        var scaffolding_contract_version = _UniFFILib.ffi_safeparts_uniffi_uniffi_contract_version();
        if (30 != scaffolding_contract_version) {
            throw new UniffiContractVersionException($"Safeparts.Native: uniffi bindings expected version `30`, library returned `{scaffolding_contract_version}`");
        }
    }
    static void uniffiCheckApiChecksums() {
        {
            var checksum = _UniFFILib.uniffi_safeparts_uniffi_checksum_func_combine_share_input();
            if (checksum != 62916) {
                throw new UniffiContractChecksumException($"Safeparts.Native: uniffi bindings expected function `uniffi_safeparts_uniffi_checksum_func_combine_share_input` checksum `62916`, library returned `{checksum}`");
            }
        }
        {
            var checksum = _UniFFILib.uniffi_safeparts_uniffi_checksum_func_inspect_share_input();
            if (checksum != 2438) {
                throw new UniffiContractChecksumException($"Safeparts.Native: uniffi bindings expected function `uniffi_safeparts_uniffi_checksum_func_inspect_share_input` checksum `2438`, library returned `{checksum}`");
            }
        }
        {
            var checksum = _UniFFILib.uniffi_safeparts_uniffi_checksum_func_split_secret();
            if (checksum != 21893) {
                throw new UniffiContractChecksumException($"Safeparts.Native: uniffi bindings expected function `uniffi_safeparts_uniffi_checksum_func_split_secret` checksum `21893`, library returned `{checksum}`");
            }
        }
    }
}

// Public interface members begin here.

#pragma warning disable 8625




class FfiConverterUInt8: FfiConverter<byte, byte> {
    public static FfiConverterUInt8 INSTANCE = new FfiConverterUInt8();

    public override byte Lift(byte value) {
        return value;
    }

    public override byte Read(BigEndianStream stream) {
        return stream.ReadByte();
    }

    public override byte Lower(byte value) {
        return value;
    }

    public override int AllocationSize(byte value) {
        return 1;
    }

    public override void Write(byte value, BigEndianStream stream) {
        stream.WriteByte(value);
    }
}



class FfiConverterUInt32: FfiConverter<uint, uint> {
    public static FfiConverterUInt32 INSTANCE = new FfiConverterUInt32();

    public override uint Lift(uint value) {
        return value;
    }

    public override uint Read(BigEndianStream stream) {
        return stream.ReadUInt();
    }

    public override uint Lower(uint value) {
        return value;
    }

    public override int AllocationSize(uint value) {
        return 4;
    }

    public override void Write(uint value, BigEndianStream stream) {
        stream.WriteUInt(value);
    }
}



class FfiConverterBoolean: FfiConverter<bool, sbyte> {
    public static FfiConverterBoolean INSTANCE = new FfiConverterBoolean();

    public override bool Lift(sbyte value) {
        return value != 0;
    }

    public override bool Read(BigEndianStream stream) {
        return Lift(stream.ReadSByte());
    }

    public override sbyte Lower(bool value) {
        return value ? (sbyte)1 : (sbyte)0;
    }

    public override int AllocationSize(bool value) {
        return (sbyte)1;
    }

    public override void Write(bool value, BigEndianStream stream) {
        stream.WriteSByte(Lower(value));
    }
}



class FfiConverterString: FfiConverter<string, RustBuffer> {
    public static FfiConverterString INSTANCE = new FfiConverterString();

    // Note: we don't inherit from FfiConverterRustBuffer, because we use a
    // special encoding when lowering/lifting.  We can use `RustBuffer.len` to
    // store our length and avoid writing it out to the buffer.
    public override string Lift(RustBuffer value) {
        try {
            var bytes = value.AsStream().ReadBytes(Convert.ToInt32(value.len));
            return System.Text.Encoding.UTF8.GetString(bytes);
        } finally {
            RustBuffer.Free(value);
        }
    }

    public override string Read(BigEndianStream stream) {
        var length = stream.ReadInt();
        var bytes = stream.ReadBytes(length);
        return System.Text.Encoding.UTF8.GetString(bytes);
    }

    public override RustBuffer Lower(string value) {
        var bytes = System.Text.Encoding.UTF8.GetBytes(value);
        var rbuf = RustBuffer.Alloc(bytes.Length);
        rbuf.AsWriteableStream().WriteBytes(bytes);
        return rbuf;
    }

    // TODO(CS)
    // We aren't sure exactly how many bytes our string will be once it's UTF-8
    // encoded.  Allocate 3 bytes per unicode codepoint which will always be
    // enough.
    public override int AllocationSize(string value) {
        const int sizeForLength = 4;
        var sizeForString = System.Text.Encoding.UTF8.GetByteCount(value);
        return sizeForLength + sizeForString;
    }

    public override void Write(string value, BigEndianStream stream) {
        var bytes = System.Text.Encoding.UTF8.GetBytes(value);
        stream.WriteInt(bytes.Length);
        stream.WriteBytes(bytes);
    }
}




class FfiConverterByteArray: FfiConverterRustBuffer<byte[]> {
    public static FfiConverterByteArray INSTANCE = new FfiConverterByteArray();

    public override byte[] Read(BigEndianStream stream) {
        var length = stream.ReadInt();
        return stream.ReadBytes(length);
    }

    public override int AllocationSize(byte[] value) {
        return 4 + value.Length;
    }

    public override void Write(byte[] value, BigEndianStream stream) {
        stream.WriteInt(value.Length);
        stream.WriteBytes(value);
    }
}



public record EncodedShare (
    string Text,
    byte Index,
    byte ShareCount,
    string SetId
) {
}

class FfiConverterTypeEncodedShare: FfiConverterRustBuffer<EncodedShare> {
    public static FfiConverterTypeEncodedShare INSTANCE = new FfiConverterTypeEncodedShare();

    public override EncodedShare Read(BigEndianStream stream) {
        return new EncodedShare(
            Text: FfiConverterString.INSTANCE.Read(stream),
            Index: FfiConverterUInt8.INSTANCE.Read(stream),
            ShareCount: FfiConverterUInt8.INSTANCE.Read(stream),
            SetId: FfiConverterString.INSTANCE.Read(stream)
        );
    }

    public override int AllocationSize(EncodedShare value) {
        return 0
            + FfiConverterString.INSTANCE.AllocationSize(value.Text)
            + FfiConverterUInt8.INSTANCE.AllocationSize(value.Index)
            + FfiConverterUInt8.INSTANCE.AllocationSize(value.ShareCount)
            + FfiConverterString.INSTANCE.AllocationSize(value.SetId);
    }

    public override void Write(EncodedShare value, BigEndianStream stream) {
            FfiConverterString.INSTANCE.Write(value.Text, stream);
            FfiConverterUInt8.INSTANCE.Write(value.Index, stream);
            FfiConverterUInt8.INSTANCE.Write(value.ShareCount, stream);
            FfiConverterString.INSTANCE.Write(value.SetId, stream);
    }
}


